# battery-watch

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: create-release-with-pyinstaller.yml  release.yml  test.yml
src/: main.py
