[tool.poetry]
name = "battery-watch"
version = "0.1.0"
description = ""
authors = ["torippy <47879788+torippy1024@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
psutil = "^5.9.4"
schedule = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
